--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,13 @@
 
 @import "{{ site.theme }}";
 
+.inner {
+  position: relative;
+  max-width: 840px;
+  padding: 20px 10px;
+  margin: 0 auto;
+}
+
 #left-column
 {
     float: left;
