--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,21 @@
   padding: 20px 10px;
   margin: 0 auto;
 }
+img {
+  float: right;
+  position: relative;
+  margin: 0 auto;
+  max-width: 739px;
+  padding: 5px;
+  margin: 10px 0 10px 0;
+  border: 1px solid #ebebeb;
 
+  box-shadow: 0 0 5px #ebebeb;
+  -webkit-box-shadow: 0 0 5px #ebebeb;
+  -moz-box-shadow: 0 0 5px #ebebeb;
+  -o-box-shadow: 0 0 5px #ebebeb;
+  -ms-box-shadow: 0 0 5px #ebebeb;
+}
 #left-column
 {
     float: left;
