--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,22 @@
 ---
 
 @import "{{ site.theme }}";
+#links2 
+{
+    float:right;
+    margin:-30px 10px 5px 10px;
+    padding: 0px 8px 15px 14px;
+    background: #ffffff;
+    font-size: 120%;
+    font-weight: bold; 
+}
+
+#links2 a{
+    color:#3937A6;
+    color:#FF8000;
+    color:#8AA627;
+    text-decoration: none;
+}
 
 .inner {
   position: relative;
