--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,21 +2,18 @@
 ---
 
 @import "{{ site.theme }}";
-#links2 
-{
-    float:right;
-    margin:-30px 10px 5px 10px;
-    padding: 0px 8px 15px 14px;
-    background: #ffffff;
-    font-size: 120%;
-    font-weight: bold; 
-}
-
-#links2 a{
-    color:#3937A6;
-    color:#FF8000;
-    color:#8AA627;
-    text-decoration: none;
+#links_banner {
+  display: block;
+  position: absolute;
+  top:100;
+  right: 10px;
+  z-index: 10;
+  padding: 10px 10px 10px 10px;
+  color: #fff;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
 }
 
 .inner {
