--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 #links_banner {
-  display: inline;
+  display: block;
   position: absolute;
   top:100;
   right: 10px;
