--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           
-          <a id="links_banner" href="https://anr-compass.github.io/compass/">Home</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="Install.html">Install</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="Guide.html">Guide</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="index.html">Home</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="install.html">Install</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="guide.html">Guide</a> &nbsp; |  &nbsp;
 
           {% if site.show_downloads %}
             <section id="downloads">
