--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-
+          <p><img src="compass-logo.png" alt="logo" height="178px" width="178px" /></p>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-          
           <a id="links_banner" href="index.html">Home</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="install.html">Install</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="guide.html">Guide</a> &nbsp; |  &nbsp;
+          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+
 
           {% if site.show_downloads %}
             <section id="downloads">
