Review on install.md + rename manual.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           <a id="links_banner" href="index.html">Home</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="install.html">Install</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="guide.html">Guide</a> &nbsp; |  &nbsp;
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <a id="links_banner" href="manual.html">Manual</a> &nbsp; |  &nbsp;
+          <a id="forkme_banner" href="https://github.com/ANR-COMPASS/shesha">View on GitHub</a>
 
 
           {% if site.show_downloads %}
