Progress in manual.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <p><img src="compass-logo.png" alt="logo" height="178px" width="178px" /></p>
+          <p><img src="images/compass-logo.png" alt="logo" height="178px" width="178px" /></p>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           <a id="links_banner" href="index.html">Home</a> &nbsp; |  &nbsp;
