Add publications + finishing manual. First release

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
           <a id="links_banner" href="index.html">Home</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="install.html">Install</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="manual.html">Manual</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="publications.html">Publications</a> &nbsp; |  &nbsp;
           <a id="forkme_banner" href="https://github.com/ANR-COMPASS/shesha">View on GitHub</a>
 
 
