--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
           <a id="links_banner" href="index.html">Home</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="news.html">News</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="install.html">Install</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="manual.html">Manual</a> &nbsp; |  &nbsp;
           <a id="links_banner" href="publications.html">Publications</a> &nbsp; |  &nbsp;
