--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,14 +17,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <p><img src="/images/compass-logo.png" alt="logo" height="178px" width="178px" /></p>
+          <p><img src="/compass/images/compass-logo.png" alt="logo" height="178px" width="178px" /></p>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-          <a id="links_banner" href="/index.html">Home</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="/news.html">News</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="/install.html">Install</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="/manual.html">Manual</a> &nbsp; |  &nbsp;
-          <a id="links_banner" href="/publications.html">Publications</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="/compass/index.html">Home</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="/compass/news.html">News</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="/compass/install.html">Install</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="/compass/manual.html">Manual</a> &nbsp; |  &nbsp;
+          <a id="links_banner" href="/compass/publications.html">Publications</a> &nbsp; |  &nbsp;
           <a id="forkme_banner" href="https://github.com/ANR-COMPASS/shesha">View on GitHub</a>
 
 
