--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,7 @@
 #forkme_banner {
     display: block;
     position: absolute;
-    top:249px;
+    top:235px;
     bottom:-40px;
     right: 10px;
     z-index: 10;
@@ -30,7 +30,22 @@
   padding: 20px 10px;
   margin: 0 auto;
 }
-img {
+p.banner {
+  float: right;
+  position: relative;
+  margin: 0 auto;
+  max-width: 840px;
+  padding: 0px;
+  margin: 0px 0 0px 0;
+  border: 1px solid #ebebeb;
+
+  box-shadow: 0 0 5px #ebebeb;
+  -webkit-box-shadow: 0 0 5px #ebebeb;
+  -moz-box-shadow: 0 0 5px #ebebeb;
+  -o-box-shadow: 0 0 5px #ebebeb;
+  -ms-box-shadow: 0 0 5px #ebebeb;
+}
+span.inner {
   float: right;
   position: relative;
   margin: 0 auto;
