--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,3 +121,32 @@ div.figure p {
     font-size: smaller;
     text-indent: 0;
 }
+
+// main>aside, main>ul.table-of-contents {
+//   padding: 0 0 4em 0;
+// }
+// @media screen and (min-width: 1050px) {
+//   main>aside, main>ul.table-of-contents {
+//     display: inline-block;
+//     padding: 4.5em 2em 4em 0;   
+//     max-width: 25%; 
+//     vertical-align: top;
+//   }
+// }
+
+// main>aside ul, main>ul.table-of-contents ul {
+//   list-style: none;
+//   padding: 0.5rem;
+// }
+
+// ul.table-of-contents {
+//   font-size: 1.125em;
+//   list-style-type: none;
+// }
+// ul.table-of-contents li {
+//   padding: 0.25rem 0;
+// }
+
+// ul.table-of-contents li li li {
+//   font-size: 1rem;
+// }
