--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,7 @@
     background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
     font-weight: 700;
     box-shadow: 0 0 10px rgba(0,0,0,.5);
+    border: 1px solid #ebebeb;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
   }
