--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,11 @@
     <div class="main">
       <div class="header__title">
         <div class="header__brand">
-          {%- include svg/logo.svg -%}
+          <img src="/assets/images/compass-logo.png" alt="logo" width="78px" height="78px">
           {%- assign _paths_root = site.paths.root | default: site.data.variables.default.paths.root  -%}
           {%- include snippets/get-nav-url.html path=_paths_root -%}
           {%- if site.title -%}
-            <a title="{%- if site.description -%}{{ site.description }}{%- endif -%}" href="{{ __return }}">{{ site.title }}</a>
+          <a title="{%- if site.description -%}{{ site.description }}{%- endif -%}" href="{{ __return }}">{{ site.title }}{%- if site.description -%} <br> {{ site.description }}{%- endif -%}</a>
           {%- endif -%}
         </div>
         {%- if site.search.provider -%}
