--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,20 @@
 /* start custom scss snippet */
 
+span.inner {
+    float: right;
+    position: relative;
+    margin: 0 auto;
+    max-width: 840px;
+    padding: 5px;
+    margin: 10px 0 10px 0;
+    border: 1px solid #ebebeb;
+  
+    box-shadow: 0 0 5px #ebebeb;
+    -webkit-box-shadow: 0 0 5px #ebebeb;
+    -moz-box-shadow: 0 0 5px #ebebeb;
+    -o-box-shadow: 0 0 5px #ebebeb;
+    -ms-box-shadow: 0 0 5px #ebebeb;
+  }
+
+
 /* end custom scss snippet */
