--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
     <div class="main">
       <div class="header__title">
         <div class="header__brand">
-          <img src="/assets/images/compass-logo.png" alt="logo" width="78px" height="78px">
           {%- assign _paths_root = site.paths.root | default: site.data.variables.default.paths.root  -%}
           {%- include snippets/get-nav-url.html path=_paths_root -%}
+          <img src="{{ __return }}/assets/images/compass-logo.png" alt="logo" width="78px" height="78px">
           {%- if site.title -%}
           <a title="{%- if site.description -%}{{ site.description }}{%- endif -%}" href="{{ __return }}">{{ site.title }}{%- if site.description -%} <br> {{ site.description }}{%- endif -%}</a>
           {%- endif -%}
