--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,6 +1,6 @@
 $base: (
-  font-family:            (-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif),
-  font-family-code:       (Menlo, Monaco, Consolas, Andale Mono, lucida console, Courier New, monospace),
+  font-family:            ('Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif),
+  font-family-code:       (Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace),
 
   font-size-root:         16px,
   font-size-root-sm:      14px,
