--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -5,20 +5,20 @@
 ///
 
 // main colors
-$main-color-1:     #fc4d50;
+$main-color-1:     #0F79D0;
 $text-color-1:     #fff;
 
 $main-color-2:     #fca24d;
 $text-color-2:     #fff;
 
-$main-color-3:     #f2f2f2;
-$text-color-3:     #333;
+$main-color-3:     #333;
+$text-color-3:     #f2f2f2;
 
 $main-color-theme-light: rgba(#000, .9);
 $main-color-theme-dark:  rgba(#fff, .9);
 
 // page background
-$background-color: #fff;
+$background-color: #f2f2f2;
 
 // text colors
 $text-color-theme-light-d: #000;
