--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -2,58 +2,58 @@ $base: (
   font-family:            ('Lucida Grande', 'Calibri', 'Helvetica', 'Arial', 'sans-serif'),
   font-family-code:       ('Monaco', 'Bitstream Vera Sans Mono', 'Lucida Console', 'Terminal', 'monospace'),
 
-  font-size-root:         16px,
-  font-size-root-sm:      14px,
+  font-size-root:         16px * 1.1,
+  font-size-root-sm:      14px * 1.1,
 
-  font-size-xl:           1.5rem,
-  font-size-lg:           1.25rem,
-  font-size:              1rem,
-  font-size-sm:           .85rem,
-  font-size-xs:           .7rem,
+  font-size-xl:           1.5rem * 0.9,
+  font-size-lg:           1.25rem * 0.9,
+  font-size:              1rem * 0.9,
+  font-size-sm:           .85rem * 0.9,
+  font-size-xs:           .7rem * 0.9,
 
-  font-size-h1-xl:        3.5rem,
-  font-size-h2-xl:        2.5rem,
-  font-size-h3-xl:        2rem,
-  font-size-h4-xl:        1.75rem,
-  font-size-h5-xl:        1.5rem,
-  font-size-h6-xl:        1.5rem,
+  font-size-h1-xl:        3.5rem * 0.9,
+  font-size-h2-xl:        2.5rem * 0.9,
+  font-size-h3-xl:        2rem * 0.9,
+  font-size-h4-xl:        1.75rem * 0.9,
+  font-size-h5-xl:        1.5rem * 0.9,
+  font-size-h6-xl:        1.5rem * 0.9,
 
-  font-size-h1-lg:        3rem,
-  font-size-h2-lg:        2rem,
-  font-size-h3-lg:        1.75rem,
-  font-size-h4-lg:        1.5rem,
-  font-size-h5-lg:        1.25rem,
-  font-size-h6-lg:        1.25rem,
+  font-size-h1-lg:        3rem * 0.9,
+  font-size-h2-lg:        2rem * 0.9,
+  font-size-h3-lg:        1.75rem * 0.9,
+  font-size-h4-lg:        1.5rem * 0.9,
+  font-size-h5-lg:        1.25rem * 0.9,
+  font-size-h6-lg:        1.25rem * 0.9,
 
-  font-size-h1:           2.5rem,
-  font-size-h2:           1.9rem,
-  font-size-h3:           1.5rem,
-  font-size-h4:           1.2rem,
-  font-size-h5:           1rem,
-  font-size-h6:           1rem,
+  font-size-h1:           2.5rem * 0.9,
+  font-size-h2:           1.9rem * 0.9,
+  font-size-h3:           1.5rem * 0.9,
+  font-size-h4:           1.2rem * 0.9,
+  font-size-h5:           1rem * 0.9,
+  font-size-h6:           1rem * 0.9,
 
-  font-size-h1-sm:        2rem,
-  font-size-h2-sm:        1.5rem,
-  font-size-h3-sm:        1.35rem,
-  font-size-h4-sm:        1.15rem,
-  font-size-h5-sm:        1rem,
-  font-size-h6-sm:        1rem,
+  font-size-h1-sm:        2rem * 0.9,
+  font-size-h2-sm:        1.5rem * 0.9,
+  font-size-h3-sm:        1.35rem * 0.9,
+  font-size-h4-sm:        1.15rem * 0.9,
+  font-size-h5-sm:        1rem * 0.9,
+  font-size-h6-sm:        1rem * 0.9,
 
-  font-size-h1-xs:        1.05rem,
-  font-size-h2-xs:        1rem,
-  font-size-h3-xs:        .95rem,
-  font-size-h4-xs:        .9rem,
-  font-size-h5-xs:        .85rem,
-  font-size-h6-xs:        .85rem,
+  font-size-h1-xs:        1.05rem * 0.9,
+  font-size-h2-xs:        1rem * 0.9,
+  font-size-h3-xs:        .95rem * 0.9,
+  font-size-h4-xs:        .9rem * 0.9,
+  font-size-h5-xs:        .85rem * 0.9,
+  font-size-h6-xs:        .85rem * 0.9,
 
-  font-weight:            400,
-  font-weight-bold:       700,
+  font-weight:            300,
+  font-weight-bold:       600,
 
   line-height-xl:         2,
-  line-height-lg:         1.8,
-  line-height:            1.6,
-  line-height-sm:         1.4,
-  line-height-xs:         1.2,
+  line-height-lg:         1.4,
+  line-height:            1.2,
+  line-height-sm:         1.0,
+  line-height-xs:         0.8,
 
   spacer:                 1rem,
 
@@ -80,10 +80,10 @@ $z-indexes: (
 
 $layout: (
   header-height:          128pix,
-  header-height-sm:       128pix,
+  header-height-sm:       96pix,
   content-max-width:      950px,
-  sidebar-width:          250px,
-  sidebar-header-height:  100pix,
+  sidebar-width:          0,
+  sidebar-header-height:  0pix,
   aside-width:            250px
 );
 
