--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -3,6 +3,7 @@ layout: page
 title: 404
 show_title: false
 ---
+
 <div class="layout--404">
   <div class="sign">
     <h1>404</h1>
@@ -10,4 +11,6 @@ show_title: false
   </div>
 </div>
 
-{{ content }}
+<div align="center">
+  {{ content }}
+</div>
