--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -12,5 +12,22 @@ show_title: false
 </div>
 
 <div align="center">
+  <pre><code class="language-mermaid">graph TB;
+    A[Do you have a problem with COMPASS?]
+    B[Then, don't worry]
+    C[Can you do something about it?]
+    D[Congratulations, you are a COMPASS master !]
+    E[Please post an issue on github]
+    F[Lucky, you are! So why are you here?]
+    G[Thanks to use COMPASS]
+    A--no--&gt;F;
+    A--yes--&gt;C;
+    C--no--&gt;B;
+    C--yes--&gt;D;
+    B--&gt;E
+    D--&gt;E
+    E--&gt;G
+    F--&gt;G
+  </code></pre>
   {{ content }}
 </div>
