disable deploy gh-pages

--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -16,7 +16,7 @@ show_title: false
     A[Do you have a problem with COMPASS?]
     B[Then, don't worry]
     C[Can you do something about it?]
-    D[Congratulations, you are a COMPASS master !]
+    D[Congratulations, you are a COMPASS superuser !]
     E[Please post an issue on github]
     F[Lucky, you are! So why are you here?]
     G[Thanks to use COMPASS]
